# FZ1oledlc

./: .gitignore  AI_HANDOFF.md  CMakeLists.txt  FZ1wiring-deftaudio-pcb.md  FZ1wiring-original.md  FZ1wiring.md  LICENSE  README.md  font.h  fz1_capture.pio  main.cpp  oled_ssd1309.cpp  oled_ssd1309.h  oled_test.cpp
.github/workflows/: release.yml
3D printed mount/: FZ1OLEDbrackets.stl  FZ1OLEDmount.stl
pcb/deftaudio_connector_adapters/: README.md
pcb/deftaudio_connector_adapters/fz10m_fz20m_vz10m_oled_IDC_adapter/: README.md  fz10_oled_IDC_adapter.kicad_prl  fz10_oled_IDC_adapter.kicad_pro  fz10_oled_IDC_adapter.kicad_sch
pcb/deftaudio_connector_adapters/fz10m_fz20m_vz10m_oled_IDC_adapter/export1.0/: fz10_oled_IDC_adapter-B_Cu.gbr  fz10_oled_IDC_adapter-B_Mask.gbr  fz10_oled_IDC_adapter-B_Paste.gbr  fz10_oled_IDC_adapter-B_Silkscreen.gbr  fz10_oled_IDC_adapter-Edge_Cuts.gbr  fz10_oled_IDC_adapter-F_Cu.gbr  fz10_oled_IDC_adapter-F_Mask.gbr  fz10_oled_IDC_adapter-F_Paste.gbr  fz10_oled_IDC_adapter-F_Silkscreen.gbr  fz10_oled_IDC_adapter-NPTH.drl  fz10_oled_IDC_adapter-PTH.drl
pcb/deftaudio_connector_adapters/fz1_oled_IDC_adapter_v2/: README.md  fz1_oled_IDC_adapter-cache.lib  fz1_oled_IDC_adapter.kicad_prl  fz1_oled_IDC_adapter.kicad_pro  fz1_oled_IDC_adapter.kicad_sch
pcb/deftaudio_connector_adapters/fz1_oled_IDC_adapter_v2/export1.0/: fz1_oled_IDC_adapter-B_Cu.gbr  fz1_oled_IDC_adapter-B_Mask.gbr  fz1_oled_IDC_adapter-B_Paste.gbr  fz1_oled_IDC_adapter-B_Silkscreen.gbr  fz1_oled_IDC_adapter-Edge_Cuts.gbr  fz1_oled_IDC_adapter-F_Cu.gbr  fz1_oled_IDC_adapter-F_Mask.gbr  fz1_oled_IDC_adapter-F_Paste.gbr  fz1_oled_IDC_adapter-F_Silkscreen.gbr  fz1_oled_IDC_adapter-NPTH.drl  fz1_oled_IDC_adapter-PTH.drl
pcb/deftaudio_connector_adapters/fz1_oled_IDC_adapter_v2/libs/: IC_Generic.dcm
pcb/deftaudio_connector_adapters/fz1_oled_IDC_adapter_v2/libs/mylib.pretty/: Pin_Header_Straight_2x14_Pitch2.54mm_anticlockwise.kicad_mod
pcb/deftaudio_pico_oled/: Pico_FZ1_OLED_PCB.kicad_pcb  Pico_FZ1_OLED_PCB.kicad_pcb-bak  Pico_FZ1_OLED_PCB.kicad_prl  Pico_FZ1_OLED_PCB.kicad_pro  Pico_FZ1_OLED_PCB.kicad_sch  README.md  fp-info-cache  sym-lib-table
pcb/deftaudio_pico_oled/export1.0/: Pico_FZ1_OLED_PCB-B_Cu.gbr  Pico_FZ1_OLED_PCB-B_Mask.gbr  Pico_FZ1_OLED_PCB-B_Paste.gbr  Pico_FZ1_OLED_PCB-B_Silkscreen.gbr  Pico_FZ1_OLED_PCB-Edge_Cuts.gbr  Pico_FZ1_OLED_PCB-F_Cu.gbr  Pico_FZ1_OLED_PCB-F_Mask.gbr  Pico_FZ1_OLED_PCB-F_Paste.gbr  Pico_FZ1_OLED_PCB-F_Silkscreen.gbr  Pico_FZ1_OLED_PCB-NPTH.drl  Pico_FZ1_OLED_PCB-PTH.drl
pcb/deftaudio_pico_oled/libs/: IC_Generic.lib
pcb/deftaudio_pico_oled/libs/mylib.pretty/: BOURNS-3362P_pot.kicad_mod
